# led_player_qml

./: CMakeLists.txt  Main.qml  ThemeManager.qml  main.cpp  test_qt.cpp  test_simple.cpp  use.txt
components/: GradientSwatch.qml  PropertyField.qml  PropertyGroup.qml  SettingGroup.qml  WiringButton.qml
dialogs/: AnimationEditorDialog.qml  QuickWiringDialog.qml
examples/DMX512Demo/: CMakeLists.txt  Main.cpp  Main.qml  UdpManager.cpp  UdpManager.h  dmxcontroller.cpp  dmxcontroller.h  main.cpp  qml.qrc
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/business/: businesscontroller.cpp  businesscontroller.h
src/core/auth/: IAuthenticator.h  PasswordAuthenticator.cpp  PasswordAuthenticator.h  authenticatorfactory.cpp  authenticatorfactory.h
src/core/models/: PlaylistTreeModel.cpp  PlaylistTreeModel.h
src/core/models/entity/: AiModelConfigModel.cpp  AiModelConfigModel.h  AuditLogModel.cpp  AuditLogModel.h  LedDeviceModel.cpp  LedDeviceModel.h  MediaSourceModel.cpp  MediaSourceModel.h  PermissionModel.cpp  PermissionModel.h  PlayListModel.cpp  PlayListModel.h  ProgramInfoModel.cpp  ProgramInfoModel.h  ProjectConfigModel.cpp  ProjectConfigModel.h  RoleModel.cpp  RoleModel.h  SceneStatisticModel.cpp  SceneStatisticModel.h  ScheduleParamModel.cpp  ScheduleParamModel.h  UserModel.cpp  UserModel.h  WindowViewModel.cpp  WindowViewModel.h
src/core/models/tree/: CppTreeModel.h  ModelDataAdapter.h  treeviewmodel.cpp
src/core/models/tree/include/: TreeViewListModel.h  TreeViewListModel.inl  treeviewmodel.h
src/core/session/: sessionmanager.cpp  sessionmanager.h
src/database/: databasemanager.cpp  databasemanager.h  scopedtransaction.cpp  scopedtransaction.h
src/database/entities/: aimodelconfig.cpp  aimodelconfig.h  auditlog.cpp  auditlog.h  leddevice.cpp  leddevice.h  mediasource.cpp  mediasource.h  permission.cpp  permission.h  playlist.cpp  playlist.h  programinfo.cpp  programinfo.h  projectconfig.cpp  projectconfig.h  role.cpp  role.h  scenestatistic.cpp  scenestatistic.h  scheduleparam.cpp  scheduleparam.h  user.cpp  user.h  windowview.cpp  windowview.h
src/database/repositories/: repositoryfactory.cpp  repositoryfactory.h  sqliteaimodelconfigrepository.cpp  sqliteaimodelconfigrepository.h  sqliteauditlogrepository.cpp  sqliteauditlogrepository.h  sqliteleddevicerepository.cpp  sqliteleddevicerepository.h  sqlitemediasourcerepository.cpp  sqlitemediasourcerepository.h  sqlitepermissionrepository.cpp  sqlitepermissionrepository.h  sqliteplaylistrepository.cpp  sqliteplaylistrepository.h  sqliteprograminforepository.cpp  sqliteprograminforepository.h  sqliteprojectconfigrepository.cpp  sqliteprojectconfigrepository.h  sqliterolerepository.cpp  sqliterolerepository.h  sqlitescenestatisticrepository.cpp  sqlitescenestatisticrepository.h  sqlitescheduleparamrepository.cpp  sqlitescheduleparamrepository.h  sqliteuserrepository.cpp  sqliteuserrepository.h  sqlitewindowviewrepository.cpp  sqlitewindowviewrepository.h
src/database/repositories/interfaces/: IAiModelConfigRepository.h  IAuditLogRepository.h  ILedDeviceRepository.h  IMediaSourceRepository.h  IPermissionRepository.h  IPlayListRepository.h  IProgramInfoRepository.h  IProjectConfigRepository.h  IRoleRepository.h  ISceneStatisticRepository.h  IScheduleParamRepository.h  IUserRepository.h  IWindowViewRepository.h
src/database/services/: aimodelconfigservice.cpp  aimodelconfigservice.h  auditlogservice.cpp  auditlogservice.h  leddeviceservice.cpp  leddeviceservice.h  mediasourceservice.cpp  mediasourceservice.h  permissionservice.cpp  permissionservice.h  playlistservice.cpp  playlistservice.h  programinfoservice.cpp  programinfoservice.h  projectconfigservice.cpp  projectconfigservice.h  roleservice.cpp  roleservice.h  scenestatisticservice.cpp  scenestatisticservice.h  scheduleparamservice.cpp  scheduleparamservice.h  userservice.cpp  userservice.h  windowviewservice.cpp  windowviewservice.h
src/qml/: CMakeLists.txt  Main.qml  MainLayout.qml  SkinConstants.js  SkinManager.qml  ThemeExample.qml  ThemeManager.qml  main.cpp  qml.qrc  qmldir
src/qml/components/: ColorSwatch.qml  GradientSwatch.qml  ImgButton.qml  LogList.qml  MediaSourceEditor.qml  MenuButton.qml  MessageDialog.qml  PropertyField.qml  SkinSwitcher.qml  TextButton.qml  TimeLineControl.qml  Tree.qml  TreeItem.qml
src/qml/components/animationEditor/: ColorBandEditorPanel.qml  MaterialTimelinePanel.qml  PlaybackPanel.qml  PropertySettingsPanel.qml
src/qml/dialogs/: AnimationEditorDialog.qml  AnimationEditorDialog.txt  HardwareSettingsDialog.qml  LoginPage.qml  NewProjectDialog.qml  NewWiringDialog.qml  QuickWiringDialog.qml
src/qml/skins/: BaseSkin.qml
src/qml/skins/Blue/: Skin.qml
src/qml/skins/Dark/: Skin.qml
src/qml/skins/Default/: Skin.qml
src/qml/utils/: CharBitmapGenerator.qml  qmldir
src/qml/views/: AIMaterialEditor.qml  AlgorithmScheduler.qml  MenuBarArea.qml  PermissionManager.qml  PlaylistPanel.qml  ProjectManager.qml  PropertyPanel.qml  SideNavigationPanel.qml  StatusBarArea.qml
src/utils/: FileHandler.h  charbitmapgenerator.cpp  charbitmapgenerator.h  cryptohelper.cpp  cryptohelper.h  datetimehelper.h  filehelper.cpp  filehelper.h
test/: CMakeCache.txt  CMakeLists.txt
views/: MenuBarArea.qml  PlaybackControlBar.qml  PlaylistPanel.qml  PropertyPanel.qml  VideoPreviewArea.qml
